--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,35 @@
 @import "tailwindcss";
+
+.japanese-bg {
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100"><path fill="none" stroke="%23ef4444" stroke-width="0.5" d="M0,0 L100,100 M100,0 L0,100" opacity="0.1"/></svg>');
+    background-size: 100px 100px;
+}
+
+.kanji-title {
+    font-family: 'Noto Sans JP', sans-serif;
+    writing-mode: vertical-rl;
+    text-orientation: upright;
+}
+
+.wave-divider {
+    height: 150px;
+    overflow: hidden;
+}
+
+.wave-divider svg {
+    height: 100%;
+    width: 100%;
+}
+
+.wave-divider .shape-fill {
+    fill: #1F2937;
+}
+
+.dojo-kun li:before {
+    content: "•";
+    color: #EF4444;
+    font-weight: bold;
+    display: inline-block;
+    width: 1em;
+    margin-left: -1em;
+}
